refactor(openapi): Add endpoint for a single providers llms
Also aggregate the LLMs using that same endpoint with the existing get all provider's LLMs.

Use private properties when possible and expose fields by provider interface methods.
